# docs/swagger.json
@@ -60,7 +60,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Setting"
+                            "$ref": "#/definitions/dtos.SettingDto"
                         }
                     }
                 ],
@@ -146,7 +146,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Sprint"
+                            "$ref": "#/definitions/dtos.SprintDto"
                         }
                     }
                 ],
@@ -232,7 +232,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Task"
+                            "$ref": "#/definitions/dtos.TaskDto"
                         }
                     }
                 ],
@@ -410,7 +410,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/dtos.LoginDto"
                         }
                     }
                 ],
@@ -514,8 +514,11 @@
                 "day": {
                     "type": "integer"
                 },
-                "employeeName": {
+                "employeeId": {
                     "description": "week/day/sprint/owner",
+                    "type": "string"
+                },
+                "employeeName": {
                     "type": "string"
                 },
                 "sprintName": {
@@ -554,6 +557,17 @@
                 }
             }
         },
+        "dtos.LoginDto": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.PageOption": {
             "type": "object",
             "properties": {
@@ -571,11 +585,53 @@
                 "data": {}
             }
         },
+        "dtos.SettingDto": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
         "dtos.SignUpDto": {
             "type": "object",
             "properties": {
                 "user": {
                     "$ref": "#/definitions/dtos.UserDto"
+                }
+            }
+        },
+        "dtos.SprintDto": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "endDate": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "startDate": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.TaskDto": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         },
@@ -611,6 +667,9 @@
                     "items": {
                         "type": "string"
                     }
+                },
+                "week": {
+                    "type": "integer"
                 }
             }
         },
@@ -634,69 +693,6 @@
                 }
             }
         },
-        "models.Setting": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "updateAt": {
-                    "type": "integer"
-                },
-                "updateBy": {
-                    "type": "string"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Sprint": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "endTimestamp": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "startTimestamp": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.Task": {
-            "type": "object",
-            "properties": {
-                "createAt": {
-                    "type": "integer"
-                },
-                "createdBy": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Update": {
             "type": "object",
             "properties": {
@@ -709,11 +705,17 @@
                 "breakaway": {
                     "type": "boolean"
                 },
+                "createdAt": {
+                    "type": "string"
+                },
                 "currentTaskIds": {
                     "type": "array",
                     "items": {
                         "type": "string"
                     }
+                },
+                "dayOfWeek": {
+                    "type": "integer"
                 },
                 "employee": {
                     "$ref": "#/definitions/models.User"
@@ -740,6 +742,9 @@
                     }
                 },
                 "timestamp": {
+                    "type": "integer"
+                },
+                "week": {
                     "type": "integer"
                 }
             }
